# dlink-vm

./: .gitignore  Cargo.toml  LICENSE  README.md  dlinkwm.toml
examples/: rust_call_wasm.rs  wasm_calll_rust.rs
src/: config.rs  host_import.rs  lib.rs  utils.rs  wasm_manager.rs
wasm/: wasm_test.wasm
wasm_test/: Cargo.toml
wasm_test/src/: lib.rs
